--- a/01-html-kategorisi/Listeler-ve-digerleri/index.html
+++ b/01-html-kategorisi/Listeler-ve-digerleri/index.html
@@ -1,5 +1,14 @@
 <h1>Listeler</h1>
 
+<!-- HTML Etiketlerine Ekstra Özellikler Eklemek #12 -->
+<h2>HTML Etiketlerine Ekstra Özellikler Eklemek #12</h2>
+
+<img src=""  class="" alt="">
+<a href="" id="" data-=""></a>
+<div class="" id="" data-=""
+></div>
+
+
 
 <!-- HTML I Blok Elementler ve Inline Elementlerle Çalışmak #11 -->
 <h2> HTML I Blok Elementler ve Inline Elementlerle Çalışmak #11</h2>
